--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/libdb
 spring.datasource.username=postgres
 spring.datasource.password=12345
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
