Настроил liquibase и создал корневую схему базы в `db.changelog-root.xml`

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
-`
+
 ## PostgreSQL database configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/libdb
 spring.datasource.username=postgres
 spring.datasource.password=12345
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
+
+## Liquibase configuration
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-root.xml
