Доработка неисправностей в работе liquibase, рефакторинг кода

--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -3,3 +3,7 @@ driver: org.postgresql.Driver
 url: jdbc:postgresql://localhost:5432/libdb
 username: postgres
 password: 12345
+
+changeLogFile: src/main/resources/db/changelog/db.changelog-root.xml
+
+verbose: true
