--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=none
 
 ## Liquibase configuration
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-root.xml
 
 spring.jpa.hibernate.use-new-id-generator-mappings=true
